--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint:js": "eslint src/**/*.ts src/**/*.tsx --fix"
   },
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "cacheable-response": "^1.9.2",
@@ -45,7 +46,7 @@
     "typescript": "^3.7.3"
   },
   "jest": {
-    "moduleNameMapper":{
+    "moduleNameMapper": {
       "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
       "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
     }
