--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@zeit/next-sass": "^1.0.1",
     "cacheable-response": "^1.9.2",
     "express": "^4.14.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
