--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "author": "Amadeusz Blanik <amadeusz@blanik.me>",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
-    "dev-server": "node server.js",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next build; NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production node server.js",
     "test": "jest",
     "test:watch": "jest — watch",
     "test:coverage": "jest — coverage",
@@ -15,6 +14,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "cacheable-response": "^1.9.2",
@@ -22,7 +22,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "9.1.4",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "rxjs": "^6.5.3"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
@@ -53,7 +54,6 @@
     }
   },
   "pre-commit": [
-    "lint:js",
-    "test"
+    "lint:js"
   ]
 }
