--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^16.12.0",
     "ts-jest": "^24.2.0",
     "typescript": "^3.7.3"
