--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "9.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
@@ -34,6 +35,7 @@
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.15",
     "@types/react-dom": "^16.9.4",
+    "@types/styled-components": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "babel-jest": "^24.9.0",
