--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-samplewars",
-  "version": "1.0.5",
+  "version": "1.1.0-rc",
   "author": "Amadeusz Blanik <amadeusz@blanik.me>",
   "license": "MIT",
   "scripts": {
